code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_6.wast
(assert_invalid
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
  "type mismatch"
)